# clipboard-transform

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  tray.rs
