[package]
name = "clipboard-transforms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
env_logger = "0.9.0"
ksni = "0.2.0"
log = "0.4.14"
notify = "4.0.17"
open = "2.0.2"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
structopt = "0.3.25"
thiserror = "1.0.30"
x11-clipboard = "0.5.3"
